--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     </div>
   </div>
 
-  <!-- Scripts -->
+  <!-- External Scripts -->
   <script src="src/scripts/chatbot.js"></script>
   <script src="src/scripts/hamburger.js"></script>
   <script src="src/scripts/video.js"></script>
